# the-dreaded-c

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LEARNING_GUIDE.md  QUICK_START.md  README.md  build.bat  build.sh  ceedling.bat  ceedling.sh  docker-compose.yml  project.yml
.github/workflows/: build-and-test.yml
docs/: LEARNING_GUIDE.md  REQUIREMENTS.md  SOFTWARE_ENGINEERING_PRACTICES.md
docs/algorithms/: ALPHA_BETA_PRUNING.md  CLI_DISPLAY_BOARD.md  MINIMAX_ALGORITHM.md  WIN_CONDITION_CALCULATOR.md
docs/build_system/: CI_AND_BUILD_SYSTEM.md  DOCKER_GUIDE.md
docs/language_learning_guides/: LEARNING_GUIDE.md  LESSON_0_Basic_Types.md  LESSON_10_The_Challenge.md  LESSON_1_Basic_Types.md  LESSON_1_Control_Flow_And_Loops.md  LESSON_2_Arrays.md  LESSON_2_Enums.md  LESSON_3_Named_Constants.md  LESSON_3_Pointers.md  LESSON_4_Functions.md  LESSON_5_Arrays.md  LESSON_5_Pointers.md  LESSON_6_Structs.md  LESSON_7_Header_Files.md  LESSON_8_Function_Pointers_And_Abstraction.md  LESSON_9_Memory_Management.md
docs/pitfalls/: PITFALL_FUNCTION_DECLARATIONS.md  PITFALL_MEMORY_AND_POINTERS.md  PITFALL_OPERATORS_AND_CONTROL_FLOW.md  PITFALL_STANDARDS_AND_CONVENTIONS.md  PITFALL_STRINGS_AND_INPUT.md  PITFALL_VARIABLES_AND_TYPES.md  README.md
include/: ai.h  ai_easy.h  board.h  constants.h  display.h  human.h  tictactoe.h  ui_interface.h  utils.h  win_condition_calculator.h
skill_levels/: README.md
skill_levels/level_1/: Makefile  README.md  tictactoe  tictactoe.c
skill_levels/level_2/: Makefile  README.md  tictactoe
skill_levels/level_2/include/: ai.h  board.h  display.h  game.h  input.h  types.h
skill_levels/level_2/src/: ai.c  board.c  display.c  game.c  input.c  main.c  types.c
src/: ai.c  ai_easy.c  board.c  constants.c  display.c  human.c  main.c  tictactoe.c  ui_cli.c  ui_gui_example.c  utils.c  win_condition_calculator.c
tests/: test_board.c  test_tictactoe.c  test_win_condition_calculator.c
